name:                visp-usage
version:             0.1.0.0
synopsis:            Fetch Virgin Australia mobile broadband usage
description:         Please see README.md
homepage:            https://github.com/ajmccluskey/visp-usage#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew McCluskey
maintainer:          andrew@ajmccluskey.com
copyright:           Andrew McCluskey
category:            Education -- TODO: find appropriate category
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     VispUsage.Fetcher
  build-depends:       base >= 4.7 && < 5
                     , text
                     , taggy-lens
                     , webdriver
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ajmccluskey/visp-usage
